Favicon and fixes

--- a/wa/wa2.html
+++ b/wa/wa2.html
@@ -1,15 +1,25 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
-    <title>Mike Jennings</title>    
+    <meta name="viewport" content="width=device-width, 
+                                   initial-scale=1">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <title>Mike Jennings</title>   
     </head>
     <body>
         <h1>Welcome</h1>
-        <a href="../img/Headshot.JPG"><img src="../img/Headshot.JPG"/></a>
+        <a href="../img/Headshot.JPG"><img src="../img/Headshot.JPG" alt="Headshot of Mike Jennings" width="265" height="265"></a>
         <h2>My name is Mike Jennings</h2><a href="img/Headshot.JPG"></a>
         <p>my pronouns are he/him</p>
         <p>my goal for this course is to showcase my architecture and design work through a portfolio website</p>
         <p>I am an undergraduate student studying Environmental Design and Creative Technology Design</p>
-        <a href="https://www.youtube.com/watch?v=KyJfb035uQ4&list=PLQcpjwveNrhI3463tNa04SON2YGh9fMVH&index=17"></a>
+        <a href="https://youtube.com/shorts/EqjTZLPWVBI" target="_blank">Click here to watch an animation I created!</a>
     </body>    
-</html>>
+</html>
