--- a/wa/wa3.html
+++ b/wa/wa3.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Designing a More Ethical Emergency Shelter</h1>
-        <img src="FemaTrailer.png" alt="An image of a typical FEMA trailer">
+        <img src="img/fematrailer.png" alt="an image of a typical FEMA trailer">
         <!-- HERE IS MY NAVIGATION -->
         <nav>
             <ul>
@@ -25,6 +25,9 @@
         <h2>Case Study: FEMA Trailers Post Katrina</h2>
         <p>     In late August of 2005, Hurricane Katrina devastated the Gulf Coast, displacing over a million people, causing $125 billion in damage, and killing 1,836 people. Weeks later, Hurricane Rita also hit the region, continuing the mass destruction (Plyer, 2016). With thousands of citizens displaced, the Federal Emergency Management Agency (FEMA) ordered 120,000 trailer homes from 60 manufactures (Smith, 2021).</p>
         <p>These trailers were built hastily, and because of that, the engineered wood that went into these homes was not properly heat treated. The lack of proper heat treating led to levels of formaldehyde, a known carcinogen, (image to the left is a Lewis structure of the formaldehyde molecule. File, 2022), that were dangerous to inhabitants, causing respiratory illness, headaches, nosebleeds, greater risk of cancer, and cognitive decline (Formaldehyde, 2014).</p>
+        <br> <!-- New line -->
+        <img src="img/Formaldehyde.png" alt="A displayed formula for a formaldehyde molecule">
+        <br> <!-- New line -->
         <p>FEMA knew of the dangerous levels of formaldehyde as early as 2006 but stopped testing levels in the trailers soon after. In 2007, FEMA planned to phase out the toxic trailers and move inhabitants out of them as soon as possible. By 2008, a congressional hearing found that the trailers were unfit for human habitation and forced FEMA to stop giving the trailers to the public and instead keep the toxic trailers in outdoor lots for evidence. This court order expired in 2010, making the trailers available for resale to auction houses across the country (Smith, 2021).</p>
         <p>These auction houses sold the trailers to thousands of people unaware of the toxic nature of the building materials. Those that bought the trailers were often low-income citizens who did not have many alternatives and could not afford the cost of sickness brought on by acute formaldehyde exposure. These FEMA trailers can still be purchased online and are used across the United States as housing for people that do not know the toxicity of their home.</p>
         <br> <!-- New line -->
@@ -55,5 +58,20 @@
         <br> <!-- New line -->
         <br> <!-- New line -->
         <h2>Sketched Solutions</h2>
-        <img src="img/Sketched Solution 1.png" alt="A scanned page from my notebook showing the first design solution.">
+        <img src="img/SketchedSolution1.png" alt="A scanned page from my notebook showing the first design solution.">
+        <br> <!-- New line -->
+        <img src="img/SketchedSolution2.png" alt="A scanned page from my notebook showing the second design solution.">
+        <br> <!-- New line -->
+        <br> <!-- New line -->
+        <h2>Bibliography</h2>
+        <br> <!-- New line -->
+        <p>FEMA, “Pub 1 and Core Values | FEMA.gov.” 2021. www.fema.gov, www.fema.gov/about/pub-1.</p>
+        <p>"File:Formaldehyde-2D.svg." Wikimedia Commons, the free media repository. 31 Oct 2020, 10:10 UTC. 21 Mar 2022, 05:30 <https://commons.wikimedia.org/w/index.php?title=File:Formaldehyde-2D.svg&oldid=508338382>.)</p>
+        <p>“Formaldehyde.” American Cancer Society, American Cancer Society, 23 May 2014, www.cancer.org/cancer/cancer-causes/formaldehyde.html#:~:text=Formaldehyde%20is%20a%20strong%2Dsmelling,coatings%3B%20and%20certain%20insulation%20materials.</p>
+        <p>“Non-Toxic Insulation: A Complete Guide.” My Chemical-Free House, 5 Apr. 2021, www.mychemicalfreehouse.net/2021/04/zero-voc-insulation.html. Accessed 24 Mar. 2022.</p>
+        <p>“Non-Toxic Travel Trailers for the Mold and Chemically Sensitive.” My Chemical-Free House, 7 Jan. 2021, www.mychemicalfreehouse.net/2021/01/mobile-homes-for-chemically-sensitive.html. Accessed 24 Mar. 2022.</p>
+        <p>Plyer, Allison. “Facts for Features: Katrina Impact.” The Data Center, 26 Aug. 2016, www.datacenterresearch.org/data-resources/katrina/facts-for-impact/.</p>
+        <p>Segura, Corinne. “Is Plywood Toxic? (Non-Toxic Alternatives).” My Chemical-Free House, 10 Nov. 2021, www.mychemicalfreehouse.net/2021/11/is-plywood-toxic-non-toxic-alternatives.html. Accessed 24 Mar. 2022.</p>
+        <p>Smith, Heather. “People Are Still Living in FEMA's Toxic Katrina Trailers -- and They Likely Have No Idea.” Grist, 7 Apr. 2021, grist.org/politics/people-are-still-living-in-femas-toxic-katrina-trailers-and-they-likely-have-no-idea/.</p>
+        <p>USGS, “How Can Climate Change Affect Natural Disasters? | U.S. Geological Survey.” 2022. www.usgs.gov, www.usgs.gov/faqs/how-can-climate-change-affect-natural-disasters#:~:text=With%20increasing%20global%20surface%20temperatures.</p>
     </body>
