--- a/wa/wa3.html
+++ b/wa/wa3.html
@@ -77,3 +77,4 @@
         <p>Smith, Heather. “People Are Still Living in FEMA's Toxic Katrina Trailers -- and They Likely Have No Idea.” Grist, 7 Apr. 2021, grist.org/politics/people-are-still-living-in-femas-toxic-katrina-trailers-and-they-likely-have-no-idea/.</p>
         <p>USGS, “How Can Climate Change Affect Natural Disasters? | U.S. Geological Survey.” 2022. www.usgs.gov, www.usgs.gov/faqs/how-can-climate-change-affect-natural-disasters#:~:text=With%20increasing%20global%20surface%20temperatures.</p>
     </body>
+</html>
