midterm final upload
all code was checked in w3c validator, page 3 has warnings but all other pages are green. :0) :100:

--- a/html-midterm/html-midterm/page4.html
+++ b/html-midterm/html-midterm/page4.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -29,22 +29,22 @@
         <tr>
             <th>Dogs</th>
             <th>Cats</th>
-            <th>Other?</th>
+            <th>Alien</th>
         </tr>
         <tr>
-            <td><img src="img/dogsFrolic.png"></td>
-            <td><img src="img/dogSinging.png">
-            <td><img src="img/labLab.png"></td>
+            <td><img src="img/dogsFrolic.png" alt="dogs frolicing in a lush grass meadow"></td>
+            <td><img src="img/dogSinging.png" alt="a dog singing"></td>
+            <td><img src="img/labLab.png" alt="a lab working in a science lab"></td>
         </tr>
         <tr>
-            <td><img src="img/boxingCats.png"></td>
-            <img src="img/orangeCat.png">
-            <td><img src="img/sunCat.png"></td>
+            <td><img src="img/boxingCats.png" alt="two cats sparring in a boxing ring"></td>
+            <td><img src="img/orangeCat.png" alt="an orange tabby cat"></td>
+            <td><img src="img/sunCat.png" alt="a cat laying on a chair in the sun"></td>
         </tr>
         <tr>
-            <td><img src="img/diamondAlien.png"></td>
-            <img src="img/creature.png"></td>
-            <td><img src="img/aliensPeace.png"></td>
+            <td><img src="img/diamondAlien.png" alt="a group of aliens fighting over a diamond"></td>
+            <td><img src="img/creature.png" alt="a strange pink squidlike sea creature"></td>
+            <td><img src="img/aliensPeace.png" alt="2 green aliens coming in peace against an orange background"></td>
         </tr>
 
     </table>
