--- a/html-midterm/html-midterm/page1.html
+++ b/html-midterm/html-midterm/page1.html
@@ -9,7 +9,7 @@
         }
     </style>
     <title>
-        Week 3 Assignment
+        Page 1
     </title>
 </head>
 <body>
@@ -22,6 +22,8 @@
     <a href="/html-midterm/page3.html">Page 3</a>
     <span> | </span>
     <a href="/html-midterm/page4.html">Page 4</a>
+    <span> | </span>
+    <a href="/html-midterm/page5.html">Page 5</a>
     <span> | </span>
 </div>
 
