--- a/wa/ica5.html
+++ b/wa/ica5.html
@@ -4,11 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Fancy letterheaded paper</title>
-    <link rel="stylesheet" type="text/css" href="/css/ica5-styles.css"/>
-    
+    <link rel="stylesheet" type="text/css" href="/scss/ica5-styles.css"/>
   </head>
   <body>
-
     <article>
         <img src="/img/top-image.png" alt="a letter head with red green and maroon triangles">
         <img src="/img/logo.png" alt="a logo with a green star">
