--- a/wa/wa5.html
+++ b/wa/wa5.html
@@ -2,12 +2,12 @@
 <html lang="en-us">
     <head>
         <meta charset="UTF-8">
-        <meta name="vieport" content="width=device-width"
-        <title> title</title>
-        <link rel="stylesheet" href="css/wa5styles.css"
+        <meta name="vieport" content="width=device-width">
+        <title>Home</title>
+        <link rel="stylesheet" href="css/wa5styles.css">
     </head>
 
     <body>
-        <img id="background" src="img/Dead Architecture Company Shirt.png"
-
+        <img id="background" src="C:\Users\Michael\OneDrive - UCB-O365\Documents\GitHub\img\DeadArchitectureLogoandSkele.png" alt="A black and white line illustration of a skeleton hand holding a cube and a skeleton holding a cube.">
     </body>
+</html>
