--- a/wa/wa3.html
+++ b/wa/wa3.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Designing a More Ethical Emergency Shelter</h1>
         <h5>By Mike Jennings</h5>
-        <img src="/img/fematrailer.png" alt="an image of a typical FEMA trailer" width="851" height="479">
+        <img src="../img/fematrailer.png" alt="an image of a typical FEMA trailer" width="851" height="479">
         <!-- HERE IS MY NAVIGATION -->
         <nav>
             <ul>
