--- a/wa/wa5.html
+++ b/wa/wa5.html
@@ -4,10 +4,13 @@
         <meta charset="UTF-8">
         <meta name="vieport" content="width=device-width">
         <title>Home</title>
-        <link rel="stylesheet" href="css/wa5styles.css">
+        <link rel="stylesheet" href="scss/wa5styles.css" />
     </head>
-
     <body>
-        <img id="background" src="C:\Users\Michael\OneDrive - UCB-O365\Documents\GitHub\img\DeadArchitectureLogoandSkele.png" alt="A black and white line illustration of a skeleton hand holding a cube and a skeleton holding a cube.">
+        <div class="container">
+        <div class="center">
+            <img id="background" src="../img/DeadArchitectureLogoandSkele.png" alt="A black and white line illustration of a skeleton hand holding a cube and a skeleton holding a cube." height=531 width=879/>
+        </div>
+        </div>
     </body>
 </html>
