--- a/wa/wa5.html
+++ b/wa/wa5.html
@@ -2,15 +2,33 @@
 <html lang="en-us">
     <head>
         <meta charset="UTF-8">
-        <meta name="vieport" content="width=device-width">
-        <title>Home</title>
-        <link rel="stylesheet" href="scss/wa5styles.css" />
+        <meta name="viewport" content="width=device-width">
+        <title>Dead Architecture Home</title>
+        <link rel="stylesheet" href="css/wa5styles.css">
+        <style type="text/css">
+            .container {
+             font-family: Helvetica;
+             color: #f9f7f2;
+             font-size: 16px
+            }
+
+            .bottom-left {
+            background-color: #425ba6;
+            padding: 2px ;
+            border: 1px solid black  ;
+            }
+        </style>
     </head>
+
     <body>
-        <div class="container">
-        <div class="center">
-            <img id="background" src="../img/DeadArchitectureLogoandSkele.png" alt="A black and white line illustration of a skeleton hand holding a cube and a skeleton holding a cube." height=531 width=879/>
-        </div>
-        </div>
+    <div class="container">
+            <img id="background" src="../img/DeadArchitectureLogoandSkele.png" div class=img alt="A black and white line illustration of a skeleton hand holding a cube and a skeleton holding a cube" height=551 width=899 style="display: block; margin-right: auto; margin-left: auto;">
+            <div class="bottom-left">
+                <strong>Visitors to Date = 0001</strong>
+                <div class="time">
+                <strong>month/day/year, 00:00:00</strong>
+            </div>
+            </div>
+    </div>
     </body>
 </html>
