--- a/wa/wa5.html
+++ b/wa/wa5.html
@@ -6,29 +6,52 @@
         <title>Dead Architecture Home</title>
         <link rel="stylesheet" href="css/wa5styles.css">
         <style type="text/css">
+              
+            body { margin:0px; 
+                padding:0px; 
+                overflow: hidden;
+            }
+
             .container {
+             position: static;
+             font-family: Helvetica;
+             color: #f9f7f2;
+             font-size: 16px;
+             height: 100%;
+            }
+
+            .bottom-left {
+            position:relative;
+            bottom: -21px;
+            font-family: Helvetica;
+            color: #f9f7f2;
+            background-color: #425ba6;
+            padding: 2px;
+            }
+
+            .time {
+             position: relative;
+             left: 1087px;
+             bottom: 0px;
              font-family: Helvetica;
              color: #f9f7f2;
              font-size: 16px
             }
 
-            .bottom-left {
-            background-color: #425ba6;
-            padding: 2px ;
-            border: 1px solid black  ;
-            }
         </style>
     </head>
 
     <body>
     <div class="container">
-            <img id="background" src="../img/DeadArchitectureLogoandSkele.png" div class=img alt="A black and white line illustration of a skeleton hand holding a cube and a skeleton holding a cube" height=551 width=899 style="display: block; margin-right: auto; margin-left: auto;">
+            <img id="background" src="../img/DeadArchitectureLogoandSkele.png" div class=img alt="A black and white line illustration of a skeleton hand holding a cube and a skeleton holding a cube" height=542 width=890 style="display: block; margin-right: auto; margin-left: auto;">
+    </div>        
             <div class="bottom-left">
                 <strong>Visitors to Date = 0001</strong>
+            </div>
                 <div class="time">
                 <strong>month/day/year, 00:00:00</strong>
             </div>
             </div>
-    </div>
+    
     </body>
 </html>
