--- a/wa/week7.html
+++ b/wa/week7.html
@@ -8,8 +8,12 @@
     <title>Dance Like Nav</title>
 </head>
 <body>
-    <h1>Put Your Title Here</h1> <!--change this text-->
-    <div id="red-ball">
+    <h1>Gallery</h1> <!--change this text-->
+    <div id="red-ball"
+    class="floating" style=
+            "height: 150px; width: 150px;
+            background: rgb(200, 200, 200);
+            padding: 10px">
     </div>
     <nav>
         <a>Home</a>
@@ -18,7 +22,7 @@
         <a>More</a>
         <a>Socials</a>
     </nav>
-    <img src="img/cedarPond.jpg">
+    <img src="/img/cedarPond.jpg" height="1600" width="2400">
 </body>
 </html>
 
