--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
-<html>
-    <head></head>
-    <body>
-        <p>Hello, World!</p>
-        <p>My name is Mike</p> <!-- Change NAME to your name! -->
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/css/index.css" rel="stylesheet">
+    <title>Mike Jennings</title>
+</head>
+<body>
+<h1>Hello,</h1>
+<h2>My name is Mike Jennings</h2>
+<div>
+<h4>I am a senior at the University of Colorado Boulder majoring in Environmental Design Architecture and minoring in Creative Technology and Design. I am passionate about our built environment of the past, present, and the infinite possibilities for the future. Outside of studying, I enjoy listening to and playing bluegrass music, sketching, hiking, and building on my coding skills.</h4>
+</div>
+<div class="columnsdownload">
+    <p>
+       <a href="../img/Mike Jennings_Resume.pdf" button class="btn" download><i class="fa fa-download"></i>Download Resume</a>
+    </p>
+ </div>
+<a href="../img/Headshot.JPG"><img src="../img/Headshot.JPG" alt="Headshot of Mike Jennings" width="330" height="330"></a>
+</body>
 </html>
