update to ica 10

--- a/wa/ica10.html
+++ b/wa/ica10.html
@@ -24,7 +24,7 @@
       }
 
       .msgBox button {
-        background: fill;
+        background: none;
         border: none;
         position: absolute;
         top: 0;
