--- a/wa/quiz10.html
+++ b/wa/quiz10.html
@@ -12,6 +12,28 @@
       * {
         box-sizing: border-box;
       }
+
+      .preview {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2em;
+}
+
+.preview p {
+  margin: 0;
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
+.preview p:first-child {
+  color: purple;
+  text-transform: capitalize;
+}
+
+.preview p:last-child {
+  color: gray;
+}
+
     </style>
     <link rel="stylesheet" href="../styles.css" />
   </head>
